# braintree-payment-graphql-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  credentials.json.example  maintainers.md  readme.md
.github/: azure-pipelines-template.yml  azure-pipelines.yml
braintree-queries-generator/: Cargo.toml  readme.md  update_schema.sh
braintree-queries-generator/src/: generate.rs  main.rs
queries/: common.graphql  customer.graphql  transactions.graphql
src/: generate.rs  lib.rs  queries.rs
src/queries/: common.rs  customer.rs  readme.md  transactions.rs
tests/: common.rs  customer.rs  extract_test_credentials.sh  transactions.rs
