[package]
name = "braintreepayment_graphql"
version = "0.1.0"
authors = ["David Gräff <david.graeff@web.de>"]
edition = "2018"
license = "MIT"
description = "This crate allows easy access to the [Braintree](https://www.braintreepayments.com) API via the GraphQL interface."

[workspace]

members = [
    "braintree-queries-generator",
]

[dependencies]
url  = "2.1.0"
reqwest = "0.9.20"
chrono = { version = "0.4.7", features = ["serde"] }
graphql_client = "0.8.0"

failure = "0.1.5"
serde_json = "^1.0"
serde = "^1.0"
rust_decimal = "1.0.3"
rust_decimal_macros = "1.0.3"
rand = "0.7.0"

[dev-dependencies]
doc-comment = "0.3.1"
