[package]
name = "braintreepayment_graphql"
version = "0.1.2"
authors = ["David Gräff <david.graeff@web.de>"]
edition = "2018"
license = "MIT"
description = "This crate allows easy access to the [Braintree](https://www.braintreepayments.com) API via the GraphQL interface."
readme = "readme.md"
keywords = ["braintree", "payment", "paypal"]
categories = ["api-bindings"]
repository = "https://github.com/davidgraeff/braintree-payment-graphql-rs"

[workspace]

members = [
    "braintree-queries-generator",
]

[dependencies]
reqwest = { version ="^0.9", default-features = false }
chrono = { version = "^0.4", features = ["serde"] }
graphql_client = "^0.8"

failure = "^0.1"
serde_json = "^1.0"
serde = "^1.0"
rust_decimal = "^1.0"
rust_decimal_macros = "^1.0"

rand =  { version = "^0.7", optional = true }

[dev-dependencies]
doc-comment = "^0.3"

[features]
default = ["default-tls", "mutation_id"]
rustls-tls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]
external_doc = []
mutation_id = ["rand"]

# Render the readme file on doc.rs
[package.metadata.docs.rs]
features = [ "external_doc", "rocket_support" ]
